# rcnn-optimize

./: README.md
A10_FPGA_Dma/: README.md
A10_FPGA_Dma/hardrock_doc/: HardRock_CE.docx  HardRock_TT.docx  hdrk.vsdx
A10_FPGA_Dma/驱动内核态/: Makefile  socfpga_arria10.dtsi  wr_fpga_ddr.c  wr_fpga_ddr.h
A10_FPGA_Dma/驱动用户态/: install.sh  pyhardrock.py  user_so_wr_fpga_ddr.c  user_so_wr_fpga_ddr.h
SingleInstance/: SingleInstance.cpp  SingleInstanceiP.cpp  build.sh
ave_pool/single_thread/: ave_pool.c  cls_score.npy  np2bin.py  test.sh
binary_picture_code/: README.md  build.sh  mask_png.cpp
boost_vector_ser/: README.md  build.sh  vec_ser_jpgs.cpp
cache_collision/: README.md  build.sh  cache_collision_511.c  cache_collision_512.c  cache_collision_513.c  cache_readahead.c  calc_cache_example.py  t.c
caffe_blstm/: README.md  blstm.prototxt  test_blstm.py
cmake_compile_local_time_to_version/: CMakeLists.txt  README.md  hello.cpp
conan_example/conan-ingenic-venus/: conandata.yml  conanfile.py  conanprofile.ingenic_t40_uclibc  conanprofile.x86_64  readme.txt
cpu_h265_to_jpg/: decompress_lib.c
cpu_jpg_to_h265/: compress_lib.c
face_app_plugin_example/: README.md  build.sh
face_app_plugin_example/example/: a.out  main.cpp  sail_face.h
face_app_plugin_example/model/t31_ssd_pad_pfmh_0316/: CMakeLists.txt  this_model_exe.cpp  this_model_exe.h  this_model_process.h
face_app_plugin_example/src/: sail_face.cpp  sail_face.h
face_recong/: build.sh  build_release.sh
face_recong/example/: main.cpp  sail_face_watch.h
face_recong/example/jpg_decoder/: CMakeLists.txt  Makefile  bitstr.c  dct.c  ffjpeg.c  jfif.c  jfif.h
face_recong/model_bin/: README.txt  facerecong.h  facerecong.onnx  facerecong.weights.txt  live_128.h  live_128.onnx  live_128.weights.txt  lt_floor.h  lt_floor.onnx  lt_floor.weights.txt
face_recong/src/: model_process.h  sail_face_watch.cpp  sample_db.h  warp_affine.h
face_warpaffine/: readme.txt
face_warpaffine/py_demo/: warp_affine.py
false_sharing/: README.md  build.sh  test.cpp  test_false.cpp  test_perf_c2c_report.txt  test_perf_false_c2c_report.txt  thread_pool.h
gpu_h265/: README.md  build.sh
gpu_jpg_to_h265/: README.md
gpu_nnp/: hevc_nvenc.cpp  lib_t.cpp  npp_resize.cpp
gpu_nvjpeg/: build.sh  main.cpp  nvJPEG.cpp  nvJPEG.hpp  nvJPEG_encoder.cpp
intel_avx/: GFLOPS.c  ReadMe  dot.cpp  gemm_cmp_huge_vector.c  huge_vector.c  make.sh
jna/: TestSo.java  build.sh  test.c
jna/call_back/: TestSo.java  build.sh  test.c
jna/demo/: Main.java  SHIC.c  build.sh
jna/struct_by_rf/: TestSo.java  test.c
jna/struct_by_vl/: TestSo.java  test.c
lab_test/c_str_auto_cat/: README.md  cstr.c
lab_test/cpp_http_client/: README.md  build.sh  http_client.cpp  http_client.h  main.cpp
lab_test/cpp_libz_example/: build.sh  libzip_simple.c
lab_test/cpp_rtti/: test.cpp
lab_test/cpp_sqlite3_example/: build.sh  employees.db  main.c  main.cpp
lab_test/cpp_str_split/: build.sh  test.cpp
lab_test/cpp_timer/: build.sh  timer.cpp
lab_test/cpp_uptr_impl/: CMakeLists.txt  README.md  main.cpp
lab_test/cpp_uptr_impl/outer/: outer.cpp  outer.h
lab_test/cpp_uptr_impl/outer/inner1/: inner1.cpp  inner1.h
lab_test/cpp_uptr_impl/outer/inner2/: inner2.cpp  inner2.h
lab_test/opencv_merger_sub_pic/: main.cpp
lab_test/rust_arena_double_linked_list/: Cargo.toml
lab_test/rust_c_demo/: Cargo.toml  README.md  build.sh  call_rust.c
lab_test/rust_hash_update/: main.rs
lab_test/rust_hash_val_is_vector/: main.rs
lab_test/rust_is_little_end/: main.rs
lab_test/rust_json/: Cargo.toml  README.md
lab_test/rust_struct_sort/: main.rs
lab_test/rustcalls/: Cargo.toml  README.md  build.sh  call_rust.c
lab_test/rustcalls/src/: lib.rs
level_thread/: README.md  common.h  gemm_tcopy_16.c  make.sh  openblas.c  test  thread_level3.c
matrix_transpose_see/: ReadMe.md  make.sh  mxn_transport.c
multithreading_roi/: build.sh  parallel.c  roi  roi_data  roi_pooling.c  roi_pooling.h  roi_position.c  roi_prop  single_roi.c
mwget_lib/: README.md  build.sh
my_array_kv/: CityHash64.cpp  README.md  SimpleHash.cpp  SimpleHash.h  build.sh  main.cpp
npu_plugin/: CMakeLists.txt  README.md  t31_test.cpp
npu_plugin/hardware/ingenic_t31/: CMakeLists.txt  jzdl.cmake
npu_plugin/hardware/ingenic_t31/jzdl/include/jzdl/: iaac.h  mat.h  utils.h
npu_plugin/include/: executor.h  net_executor.h
npu_plugin/model/demo_model/: this_model_exe.cpp  this_model_process.h
npu_plugin/model/t31_ssd_pad_pfmh_0316/: CMakeLists.txt  pfmh_ipcdata_int4_288x384_0316.onnx  this_model_exe.cpp  this_model_exe.h  this_model_process.h
npu_plugin/model_crypt/: CMakeLists.txt  idst_model_crypt.cpp  idst_model_crypt.h  rc4.cpp  sha.h
npu_plugin/model_crypt/host/: main.cc
onnx_graph_split_fuse/: build.sh  example.sh  t31.txt  test.py
onnx_utils/: align_resadd_scale.py  create_quant_node_graph.py  cut_submodel_using_onnx.py
optimize_gemm_step_by_step/: README.md  debug.c  makefile  step1.c  step2.c  step3.c  step4.c  step5.c  step6.c  step7.c  step8.c  step9.c
pthread_fc_cache_and_sharejob/: README.md  fc_pthread_nt.c  make.sh
rc4/: build.sh  test.cpp
rc4_sha1/: build.sh  readme.rd  testRC4.cpp  testSHA.c
rf_roi/: rf.py
rfcn_net/: README.md  __init__.py  a10_main.py  after_rfcn.py  build.sh  cls_prob_pre.npy  cnn.c  cnn.h  config.h  generate_anchors.py  im_info.npy  main.py  net.c  parallel.c  parallel.h  rfcn_bbox.npy  rfcn_cls.npy  rpn.c  rpn.h  rpn_bbox_pred.npy  rpn_cls_score.npy
ristretto_rfcn/: README.md  exampel.sh  test_roi.py  test_roi_quantized.py
roi_pooling_python/: roi_pooling.py
rpclib/: README.md  build.sh  cli.cpp  ser.cpp  show.py
rpn_optimize/: README.md  format.c  format.h  generate_anchors.py  test.sh
rpn_proposal/: README.md  anchors  deltas  make.sh  rpn_proposal.c  scores
rust/java_jna_c_rust_demo/rust/rustcalls/: Cargo.toml  build.rs  build.sh
rust/java_jna_c_rust_demo/rust/rustcalls/src/: lib.rs
softmax/: README.md  build.sh  cls_prob_pre.npy  np2bin.py  softmax  softmax.c
sort/: build.sh  parallel.h  qsmg.cpp  qsmt.cpp  topk.c
(+526 files in other folders)
