[package]
name = "rustcalls"
version = "0.1.0"
authors = ["朴珞 <shankun.shankunwan@alibaba-inc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustcalls"
crate-type =["cdylib"]

[dependencies]
ffi-support = "0.3.5"#测试ByteBuffer使用
